feat: chat-service-test